; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp32/extr_panic.c_esp_clear_watchpoint.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp32/extr_panic.c_esp_clear_watchpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @esp_clear_watchpoint(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  call void asm sideeffect "wsr.dbreakc0 $0\0A", "r,~{dirflag},~{fpsr},~{flags}"(i32 %7) #1, !srcloc !2
  br label %10

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  call void asm sideeffect "wsr.dbreakc1 $0\0A", "r,~{dirflag},~{fpsr},~{flags}"(i32 %9) #1, !srcloc !3
  br label %10

10:                                               ; preds = %8, %6
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 244}
!3 = !{i32 329}
